// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should be rendered correctly 1`] = `
<nav
  className="root uui-paginator uui-size-24"
  data-my_attr="value"
  id="123"
  role="navigation"
>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-outline uui-color-secondary uui-size-24"
    tabIndex={-1}
    type="button"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      1
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      2
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      3
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      4
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      5
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled container root uui-button uui-fill-ghost uui-color-secondary uui-size-24 spacer page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      ...
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="uui-caption"
    >
      10
    </div>
  </button>
  <button
    className="uui-button-box uui-enabled -clickable container root uui-button uui-fill-outline uui-color-secondary uui-size-24"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </button>
</nav>
`;

exports[`Paginator should be rendered correctly when disabled 1`] = `
<nav
  className="root uui-paginator uui-size-24"
  data-my_attr="value"
  id="123"
  role="navigation"
>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-outline uui-color-secondary uui-size-24"
    tabIndex={-1}
    type="button"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      1
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      2
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      3
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      4
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      5
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-secondary uui-size-24 spacer page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      ...
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-ghost uui-color-primary uui-size-24 mode-ghost page"
    tabIndex={-1}
    type="button"
  >
    <div
      className="uui-caption"
    >
      10
    </div>
  </button>
  <button
    aria-disabled={true}
    className="uui-button-box uui-disabled container root uui-button uui-fill-outline uui-color-secondary uui-size-24"
    tabIndex={-1}
    type="button"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </button>
</nav>
`;
